--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: air-action-test
-        path: air-action-test.exe
+        path: .
